[package]
name = "boula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1.6", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = { version = "0.1", features = ["net"]}
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
log = "0.4"
rand = "0.8"
futures = "0.3"
uuid = { version = "1.3", features = ["v4"]}

[dev-dependencies]
goldenfile = "1.4"
pretty_assertions = "1.3"
serial_test = "2.0"
tempdir = "0.3"
tempfile = "3.5"